--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -695,9 +695,9 @@ cnzz_siteid:
 # AppID and AppKey are recommended to be the same as valine's for counter compatibility.
 # Do not enable both `valine.visitor` and `leancloud_visitors`.
 leancloud_visitors:
-  enable: false
-  app_id: # <app_id>
-  app_key: # <app_key>
+  enable: true
+  app_id: u8TpIriGw2IpKOJiW90prUon-gzGzoHsz
+  app_key: yxGPeSkeRi6Xj1sOXbIpazgK
   # Dependencies: https://github.com/theme-next/hexo-leancloud-counter-security
   # If you don't care about security in leancloud counter and just want to use it directly
   # (without hexo-leancloud-counter-security plugin), set `security` to `false`.
