--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "clean": "hexo clean",
     "deploy": "hexo deploy",
     "server": "hexo server",
-    "test": "echo 1"
+    "test": "echo 1",
+    "c": "hexo new post"
   },
   "hexo": {
     "version": "4.2.0"
