--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "build:notion": "node notion/index.js",
     "start": "hexo server",
     "build": "hexo generate",
     "clean": "hexo clean",
@@ -15,6 +16,7 @@
     "version": "4.2.0"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "hexo": "^4.0.0",
     "hexo-excerpt": "^1.1.4",
     "hexo-generator-archive": "^1.0.0",
