修复无法提交

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ before_deploy:
   - npm run build:notion
   - git add .
   - git commit -m 'ci auto'
-  - git push -f "https://${GITHUB_TOKEN}@github.com/lmikoto/blog.git" master:master
+  - git push -f "https://${GITHUB_TOKEN}@github.com/lmikoto/blog.git"
   - hexo generate
 deploy:
   provider: pages
