--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,7 @@ language: node_js
 node_js:
   - "10"
 before_deploy:
-  - npm run build:notion
-  - git add .
-  - git commit -m 'ci auto'
-  - git push -f "https://${GITHUB_TOKEN}@github.com/lmikoto/blog.git" HEAD:master
+  - npm run yuque:build
   - hexo generate
 deploy:
   provider: pages
