--- a/.github/workflows/yueque.yaml
+++ b/.github/workflows/yueque.yaml
@@ -1,5 +1,5 @@
 name: Deploy To Github Pages
-on: [repository_dispatch]
+on: [repository_dispatch,workflow_dispatch]
 jobs: 
   deploy:
      name: Deploy Hexo Public To Pages 
@@ -22,7 +22,7 @@ jobs:
         - name: Deploy
           uses: peaceiris/actions-gh-pages@v3
           with:
-            deploy_key: ${{ secrets.Github_SSH_PRIVATE_KEY }}
+            deploy_key: ${{ secrets.SSH_KEY }}
             external_repository: lmikoto/lmikoti.github.io
             publish_branch: master
             publish_dir: ./public
