--- a/.github/workflows/yueque.yaml
+++ b/.github/workflows/yueque.yaml
@@ -22,7 +22,7 @@ jobs:
         - name: Deploy
           uses: JamesIves/github-pages-deploy-action@releases/v3
           with:
-            ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+            GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
             REPOSITORY_NAME: lmikoto/lmikoto.github.io
             FOLDER: public
             BRANCH: master
