--- a/.github/workflows/yueque.yaml
+++ b/.github/workflows/yueque.yaml
@@ -20,9 +20,9 @@ jobs:
            npm install
            npm run build
         - name: Deploy
-          uses: JamesIves/github-pages-deploy-action@releases/v3
+          uses: JamesIves/github-pages-deploy-action@3.6.2
           with:
-            GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+            ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
             REPOSITORY_NAME: lmikoto/lmikoto.github.io
             FOLDER: public
             BRANCH: master
