--- a/.github/workflows/yueque.yaml
+++ b/.github/workflows/yueque.yaml
@@ -21,7 +21,7 @@ jobs:
            npm run build
         - name: Deploy
           uses: peaceiris/actions-gh-pages@v2.5.1
-          with:
+          env:
             ACTIONS_DEPLOY_KEY: ${{ secrets.SSH_KEY }}
             EXTERNAL_REPOSITORY: lmikoto/lmikoto.github.io
             PUBLISH_DIR: ./public
