--- a/.github/workflows/yueque.yaml
+++ b/.github/workflows/yueque.yaml
@@ -21,6 +21,8 @@ jobs:
            npm install
            npm run yuque:build
            npm run image:download
+           git config --global user.email "lmikoto@outlook.com"
+           git config --global user.name "lmikoto"
            git add .
            git commit -m 'ci auto'
            git push -f "https://${GITHUB_TOKEN}@github.com/lmikoto/blog.git" HEAD:master
