--- a/.github/workflows/yueque.yaml
+++ b/.github/workflows/yueque.yaml
@@ -21,6 +21,7 @@ jobs:
            npm install
            npm run yuque:build
            npm run image:download
+           npm run build
            git config --global user.email "lmikoto@outlook.com"
            git config --global user.name "lmikoto"
            git add .
