--- a/.github/workflows/yueque.yaml
+++ b/.github/workflows/yueque.yaml
@@ -21,11 +21,7 @@ jobs:
            npm install
            npm run yuque:build
            npm run build
-           git config --global user.email "lmikoto@outlook.com"
-           git config --global user.name "lmikoto"
-           git add .
-           git commit -m 'ci auto'
-           git push -f "https://${GITHUB_TOKEN}@github.com/lmikoto/blog.git" HEAD:master
+           sh gitcommit.sh
         - name: Deploy
           uses: peaceiris/actions-gh-pages@v2.5.1
           env:
