--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "version": "4.2.0"
   },
   "dependencies": {
-    "axios": "^0.19.2",
+    "axios": "0.21.1",
     "hexo": "^4.0.0",
     "hexo-excerpt": "^1.1.4",
     "hexo-generator-archive": "^1.0.0",
@@ -34,12 +34,13 @@
     "hexo-server": "^1.0.0",
     "kind-of": "6.0.3",
     "request": "^2.88.2",
-    "yuque-hexo": "^1.6.5"
+    "yuque-hexo": "1.7.0",
+    "ini": ">=1.3.6"
   },
   "yuqueConfig": {
     "baseUrl": "https://www.yuque.com/api/v2",
     "login": "lmikoto",
-    "repo": "lmikoto",
+    "repo": "note",
     "mdNameFormat": "title",
     "postPath": "source/_posts",
     "onlyPublished": true
